minor additions to start building project

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
         <meta charset = "UTF-8">
         <title>Personal Library</title>
         <link rel = "stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap">
     </head>
     <body>
-        <p>Library Project</p>
+        <div id = "header">
+            <div id = "shelfImg"><img src = "https://img.icons8.com/ios/100/000000/book-shelf.png"></div>
+            <div id = "pageTitle">Personal Library</div>
+        </div>
+        <div id = "toolbar">
+            <button>
+                <img src = "https://img.icons8.com/material-outlined/24/000000/add-book.png"/>
+            </button>
+            <p>Add Book</p>
+            <div></div>
+            
+        </div>
+        
 
 
 
