--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
         <meta charset = "UTF-8">
         <title>Personal Library</title>
         <link rel = "stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap">
     </head>
     <body>
-        <div id = "header">
-            <div id = "shelfImg"><img src = "https://img.icons8.com/ios/100/000000/book-shelf.png"></div>
-            <div id = "pageTitle">Personal Library</div>
-        </div>
-        <div id = "toolbar">
-            <button>
-                <img src = "https://img.icons8.com/material-outlined/24/000000/add-book.png"/>
-            </button>
-            <p>Add Book</p>
-            <div></div>
-            
+        <div class = "mainContainer">
+            <div id = "header">
+                <div id = "shelfImg"><img src = "https://img.icons8.com/ios/100/000000/book-shelf.png"></div>
+                <div id = "pageTitle">Personal Library</div>
+            </div>
+            <p id = "subTitle">A Virtual Bookshelf Organizing Tool</p>
+            <div id = "toolbarContainer">
+                    <button id = "addBookButton" title = "Add Book"><img src = "https://img.icons8.com/material-outlined/24/000000/add-book.png"/>
+                    </button>
+                    <div>
+                        <div>Book Title</div>
+                        <input>
+                    </div>
+                    <div>
+                        <div>Author</div>
+                        <input>
+                    </div>
+                    <div>
+                        <label>Have You Read This Book?</label>
+                            <select id="read">
+                            <option value="Read">Read</option>
+                            <option value="notRead">Not Read</option>
+                            </select>
+                    </div>
+            </div>
         </div>
         
 
@@ -55,3 +67,4 @@
     </body>
     <script type="text/javascript" src = "javaScript.js"></script>
 </html>
+
