added modal save book input, restructred book info object storage

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <div id="bookModal" class="modal">
                         <div class="modalContent">
                             <span class="close">&times;</span>
+                            <div>Additional Book Information</div><br>
                             <div>Would you reccomend this book?
                                 <select id="recommend">
                                     <option value="Yes">Yes</option>
@@ -29,7 +30,8 @@
                             </div>
                             <div>How many pages?
                                 <input id="pages" title = "Enter Number of Pages">
-                            </div>
+                            </div><br>
+                            <button id="saveBookInfo">Add Book</button>
                         </div>
                     </div>
                     <div>
@@ -57,32 +59,6 @@
         
         </div>
         
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
