added functionality for displaying book + info in DOM

--- a/index.html
+++ b/index.html
@@ -50,11 +50,8 @@
                             </select>
                     </div>
             </div>
-            <div class="book-container">
-                <div class="book">Book here </div>
-                <div class="book">Book here</div>
-                <div class="book">Book here</div>
-                <div class="book">Book here</div>
+            <div id="book-container">
+                
             </div>
         
         </div>
