--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div id = "shelfImg"><img src = "https://img.icons8.com/ios/100/000000/book-shelf.png"></div>
                 <div id = "pageTitle">Personal Library</div>
             </div>
-            <p id = "subTitle">A Virtual Bookshelf Organizing Tool</p>
+            <p id = "subTitle">A Virtual Bookshelf Tool</p>
             <div id = "toolbarContainer">
                     <button id = "addBookButton" title ="Add Book">
                         <img src = "https://img.icons8.com/material-outlined/24/000000/add-book.png"/>
