changes to button structure

--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
                         <div class="modalContent">
                             <span class="close">&times;</span>
                             <div>Additional Book Information</div><br>
-                            <div>Would you reccomend this book?
-                                <select id="recommend">
-                                    <option value="Yes">Yes</option>
-                                    <option value="No">No</option>
-                                </select>    
+                            <div>Book Genre: 
+                                <input id="genre" title = "Enter Book Genre">
                             </div>
                             <div>How many pages?
                                 <input id="pages" title = "Enter Number of Pages">
