minor changes in CSS and added link to github page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <footer id = "footer">
                 <p id = "signature">Created by: Devin</p>
-                <a href = "">
+                <a href = "https://github.com/Mtbiker17/Personal-Library">
                 <img src = "GitHub-Mark-32px.png"></a>
         </footer>
         
